burrrtongg/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: burrrtongg-backend-service
  namespace: burrrtongg-app
spec:
  type: ClusterIP
  selector:
    app: burrrtongg-backend
  ports:
    - port: 8080
      targetPort: 8080


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: burrrtongg-backend-deployment
  namespace: burrrtongg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burrrtongg-backend
  template:
    metadata:
      labels:
        app: burrrtongg-backend
    spec:
      containers:
        - name: burrrtongg-backend
          image: phruek07/burrrtongg-app:latest
          ports:
            - containerPort: 8080
