burrrtongg/elastic-search.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: burrrtongg-app
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: burrrtongg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: kittikhun108/elasticsearch:8.11.1
          ports:
            - containerPort: 9200
