burrrtongg/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: burrrtongg-frontend-service
  namespace: burrrtongg-app
spec:
  selector:
    app: burrrtongg-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP

---

piVersion: apps/v1
kind: Deployment
metadata:
  name: burrrtongg-frontend-deployment
  namespace: burrrtongg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burrrtongg-frontend
  template:
    metadata:
      labels:
        app: burrrtongg-frontend
    spec:
      containers:
        - name: burrrtongg-frontend
          image: phruek07/burrrtongg-frontend:latest
          ports:
            - containerPort: 3000
